--- a/templates/registration/login.pug
+++ b/templates/registration/login.pug
@@ -11,7 +11,7 @@ html
 
   body
     #panel1 <!-- bubble and loging panel -->
-      #backgrounds
+      #background-element
         #bubbles
           #grey-bubble1.grey-bubble 
           #grey-bubble2.grey-bubble
