--- a/static/sass/login.css
+++ b/static/sass/login.css
@@ -8,19 +8,74 @@ body {
   flex-direction: row;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 75%;
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  margin-top: 3%; }
 
-#background-element {
-  margin-right: 10%; }
+#background-element span {
+  border-radius: 50%;
+  display: block; }
+
+.grey-bubble {
+  position: absolute;
+  background-color: #DEDEDE; }
+
+#grey-bubble1 {
+  height: 30vh;
+  width: 30vh;
+  top: 28%;
+  left: 18%;
+  z-index: -2; }
+
+#grey-bubble2 {
+  height: 10vh;
+  width: 10vh;
+  top: 65%;
+  left: 39%;
+  z-index: 2; }
+
+#grey-bubble3 {
+  height: 8vh;
+  width: 8vh;
+  top: 30%;
+  left: 40%;
+  z-index: 3; }
+
+#grey-bubble4 {
+  height: 5vh;
+  width: 5vh;
+  top: 80%;
+  left: 20%;
+  z-index: 3; }
+
+#white-bubble1 {
+  height: 50vh;
+  width: 50vh;
+  top: 30%;
+  left: 20%;
+  position: absolute;
+  z-index: -1;
+  background-color: #FFFFFF;
+  display: block; }
+
+#introduction {
+  position: absolute;
+  z-index: 1;
+  top: 43%;
+  left: 24%;
+  text-align: center; }
 
 #login-panel {
   background-color: #FFCFBF;
   border: 2px solid #FFFFFF;
   box-shadow: 5px 10px 25px 0px #00000026;
   border-radius: 3vh;
-  padding: 6vh; }
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 6vh;
+  z-index: 10; }
   #login-panel h1 {
     text-align: center;
     font-size: 3vw; }
@@ -46,5 +101,7 @@ body {
       font-size: 1.5vw; }
       #login-panel .buttons p #sign-up {
         margin-right: 0; }
+  #login-panel hr {
+    margin: 0; }
 
 /*# sourceMappingURL=login.css.map */
