--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -82,13 +82,17 @@ body
   .input-area
     border-radius: 3vh
     height: 3vw
+    font-size: 1.3vw
+    outline: none
   .input-description
     margin: 1.5vw 0 0.5vw 0
   .buttons
     display: flex
     flex-direction: row
     margin-left: 5vw
+    outline: none
     input
+      //outline: none
       margin: 0 1vw 0 0 
       padding: 5%
       background-color: #3AEDC2
