modify login bubbles' transform, set fonts

--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -6,11 +6,11 @@
 
 
 \:root
-  --background_color: #FFFFFF
-  --background_color_card: #E8E8E8
+  --background-color: #FFFFFF
+  --background-color-card: #E8E8E8
   --fontcolor-navbarbutton: #000000
-  --fontcolor_header: #000000
-  --fontcolor_text: #000000
+  --fontcolor-header: #000000
+  --fontcolor-text: #000000
   --color-main: #FAAD95
   --font-family-header: "jf-openhuninn", "Tahoma", "Arial"
   --font-style-header: normal
@@ -26,7 +26,7 @@
   margin: 0
   padding: 0
 
-/*background_group photo
+/*background-group photo
 #background
   position: fixed
   background-color: #EEEEEE
@@ -53,7 +53,7 @@
 h1
   position: static
   text-align: center
-  color: var(--fontcolor_header)
+  color: var(--fontcolor-header)
   font-size: 9vh
   font-weight: normal
   font-family: var(--font-family-header)
@@ -64,7 +64,7 @@ p
   /*要怎麼限制在一定的(左右)範圍內？
   position: static
   text-align: center
-  color: var(--fontcolor_text)
+  color: var(--fontcolor-text)
   font-size: 18px
   font-weight: 500
   font-family: var(--font-family-text)
@@ -73,7 +73,7 @@ p
   line-height: 1.4825em
 
 a
-  color: var(--fontcolor_header)
+  color: var(--fontcolor-header)
 
 
 #slogan
@@ -175,7 +175,7 @@ a
   *
     font-size: 36px
     text-align: left
-    color: var(--fontcolor_header)
+    color: var(--fontcolor-header)
 
   p
     text-align: left
