--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -1,6 +1,27 @@
 /********
 /*nav_bar
 /********
+
+@font-face
+  font-family: jf-openhuninn
+  src: url('../fonts/jf-openhuninn-1.1.woff') format("woff")
+  font-display: auto
+
+
+\:root
+  --background_color: #FFFFFF
+  --background_color_card: #E8E8E8
+  --fontcolor-navbarbutton: #000000
+  --fontcolor_header: #000000
+  --fontcolor_text: #000000
+  --color-main: #FAAD95
+  --font-family-header: "jf-openhuninn", "Tahoma", "Arial"
+  --font-style-header: normal
+  --font-family-text: "jf-openhuninn", "Tahoma", "Arial"
+  --font-style-text: normal
+  --font-family-card: "jf-openhuninn", "Tahoma", "Arial"
+  --font-style-card: normal
+
 #navbar
   display: flex
   flex-direction: row
