--- a/templates/registration/login.pug
+++ b/templates/registration/login.pug
@@ -29,10 +29,15 @@ html
 
     #background-element
       #bubbles
-        span#grey-bubble1.grey-bubble 
-        span#grey-bubble2.grey-bubble
-        span#grey-bubble3.grey-bubble
-        span#grey-bubble4.grey-bubble 
+        #gb1.bbox
+          span#grey-bubble1.grey-bubble 
+        #gb2.bbox
+          span#grey-bubble2.grey-bubble
+        #gb3.bbox
+          span#grey-bubble3.grey-bubble
+        #gb4.bbox
+          span#grey-bubble4.grey-bubble 
+        #wb1.bbox
         span#white-bubble1
       #introduction <!-- join us.. -->
         h1 Join us now.
