some modified to login sass add connection to about us page change login panel size

--- a/static/sass/login.css
+++ b/static/sass/login.css
@@ -28,9 +28,10 @@ body {
 #panel1 {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   position: absolute;
   top: 50%;
-  left: 75%;
+  left: 80%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   margin-top: 3%; }
@@ -63,8 +64,8 @@ body {
   z-index: -2; }
 
 #grey-bubble1 {
-  height: 30vh;
-  width: 30vh;
+  height: 15vw;
+  width: 15vw;
   position: absolute;
   transform: translate(-105%, -50%);
   top: 50%;
@@ -75,8 +76,8 @@ body {
   z-index: 2; }
 
 #grey-bubble2 {
-  height: 10vh;
-  width: 10vh;
+  height: 5vw;
+  width: 5vw;
   position: absolute;
   transform: translate(200%, -50%);
   top: 50%;
@@ -87,8 +88,8 @@ body {
   z-index: 3; }
 
 #grey-bubble3 {
-  height: 8vh;
-  width: 8vh;
+  height: 4vw;
+  width: 4vw;
   position: absolute;
   transform: translate(285%, -50%);
   top: 50%;
@@ -99,8 +100,8 @@ body {
   z-index: 4; }
 
 #grey-bubble4 {
-  height: 5vh;
-  width: 5vh;
+  height: 2.5vw;
+  width: 2.5vw;
   position: absolute;
   transform: translate(600%, -50%);
   top: 50%;
@@ -111,8 +112,8 @@ body {
   z-index: -1; }
 
 #white-bubble1 {
-  height: 50vh;
-  width: 50vh;
+  height: 25vw;
+  width: 25vw;
   top: 50%;
   left: 50%;
   position: absolute;
@@ -127,6 +128,10 @@ body {
   top: 50%;
   left: 30%;
   text-align: center; }
+  #introduction h1 {
+    font-size: 3vw; }
+  #introduction p {
+    font-size: 1.3vw; }
 
 #login-panel {
   background-color: #FFCFBF;
@@ -137,7 +142,8 @@ body {
   flex-direction: column;
   align-items: stretch;
   padding: 6vh;
-  z-index: 10; }
+  z-index: 10;
+  width: 45%; }
   #login-panel h1 {
     text-align: center;
     font-size: 3vw; }
@@ -147,25 +153,40 @@ body {
     font-size: 1.3vw;
     outline: none; }
   #login-panel .input-description {
-    margin: 1.5vw 0 0.5vw 0; }
+    margin: 1.5vw 0 0.5vw 0;
+    font-size: 1.3vw; }
+  #login-panel #forgot {
+    font-size: 1vw;
+    text-align: right;
+    margin-top: 0; }
+  #login-panel #forgot:hover {
+    cursor: pointer;
+    text-decoration: underline; }
   #login-panel .buttons {
     display: flex;
     flex-direction: row;
-    margin-left: 5vw;
+    margin: 10% 0 0 6vw;
+    font-size: 1vw;
     outline: none; }
     #login-panel .buttons input {
       margin: 0 1vw 0 0;
-      padding: 5%;
+      padding: 8%;
       background-color: #3AEDC2;
       border: none;
       border-radius: 1.5vh;
-      height: 5vh; }
+      height: 5vh;
+      font-size: 1vw; }
+    #login-panel .buttons input:hover {
+      cursor: pointer; }
     #login-panel .buttons p {
-      margin: 0 1vw 0 0;
+      margin: 0 5% 0 0;
       text-align: center;
-      font-size: 1.5vw; }
-      #login-panel .buttons p #sign-up {
-        margin-right: 0; }
+      padding-top: 8%; }
+    #login-panel .buttons #sign-up {
+      margin: auto 0; }
+    #login-panel .buttons #sign-up:hover {
+      cursor: pointer;
+      text-decoration: underline; }
   #login-panel hr {
     margin: 0; }
 
