--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -1,4 +1,5 @@
 {% load sass_tags %}
+{% url 'about_us' as about_us_url %}
 link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")  
 header
   #navbar 
@@ -10,4 +11,4 @@ header
       li 
         a.button(href="#") activity
       li 
-        a.button(href="#") about us
+        a.button(href="{{ about_us_url }}") about us
