doing login data link to database, still figuring out why POST is not working

--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -180,8 +180,10 @@ body
       background-color: #3AEDC2
       border: none
       border-radius: 1.5vh
-      height: 5vh
+      height: 3vh
+      width: 3vw
       font-size: 1vw
+      outline: none
     
     input:hover
       cursor: pointer
