--- a/static/sass/login.css
+++ b/static/sass/login.css
@@ -174,8 +174,10 @@ body {
       background-color: #3AEDC2;
       border: none;
       border-radius: 1.5vh;
-      height: 5vh;
-      font-size: 1vw; }
+      height: 3vh;
+      width: 3vw;
+      font-size: 1vw;
+      outline: none; }
     #login-panel .buttons input:hover {
       cursor: pointer; }
     #login-panel .buttons p {
