--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -153,6 +153,8 @@ body
     height: 3vw
     font-size: 1.3vw
     outline: none
+    text-indent: 1em
+    padding-bottom: 0
 
   .input-description
     margin: 1.5vw 0 0.5vw 0
