--- a/templates/login.pug
+++ b/templates/login.pug
@@ -25,7 +25,7 @@ html
           p#forgot Forgot Password?
 
           .buttons 
-            input(value="Login", type="submmit")
+            input(value="Login", type="submit")
             //p or
             p#sign-up Sign up
 
