--- a/static/sass/login.css
+++ b/static/sass/login.css
@@ -151,7 +151,9 @@ body {
     border-radius: 3vh;
     height: 3vw;
     font-size: 1.3vw;
-    outline: none; }
+    outline: none;
+    text-indent: 1em;
+    padding-bottom: 0; }
   #login-panel .input-description {
     margin: 1.5vw 0 0.5vw 0;
     font-size: 1.3vw; }
