--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -164,6 +164,7 @@ body
     font-size:  1vw
     text-align: right
     margin-top: 0
+    padding-right: 0.5vw
   #forgot:hover
     cursor: pointer
     text-decoration: underline
@@ -182,8 +183,8 @@ body
       background-color: #3AEDC2
       border: none
       border-radius: 1.5vh
-      height: 3vh
-      width: 3vw
+      height: 5vh
+      width: auto
       font-size: 1vw
       outline: none
     
