--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -79,3 +79,7 @@
     margin-right: 10%
   a
     text-decoration: none
+    color: var(--fontcolor-navbarbutton)
+  
+  a:hover
+    text-decoration: underline
