--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -5,7 +5,7 @@ html
   head
     meta(charset="utf-8")
     meta(content="width=device-width, initial-scale=1", name="viewport")                 
-    title CONNECT 
+    title CONNECT - About Us
     {% load sass_tags %}
     link(href="{% sass_src 'sass/about_us.sass' %}",rel="stylesheet",type="text/css")  
 
