--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -148,6 +148,12 @@ body
     text-align: center
     font-size: 3vw
 
+
+  form 
+    display: flex
+    flex-direction: column
+    align-items: stretch
+
   .input-area
     border-radius: 3vh
     height: 3vw
