modify login app div.hidden

--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -210,3 +210,16 @@ body
   
   hr
     margin: 0
+
+
+@media only screen and (max-width: 450px)
+  #navbar
+    visibility: hidden
+  #bubbles
+    visibility: hidden
+  #panel1
+    left: 50%
+  #introduction
+    top: 80%
+    left: 50%
+
