add favicon of the website

--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -6,6 +6,7 @@ html
     meta(charset="utf-8")
     meta(content="width=device-width, initial-scale=1", name="viewport")                 
     title CONNECT - About Us
+    link(href="{% static 'file/logo.ico' %}",rel="icon")
     {% load sass_tags %}
     link(href="{% sass_src 'sass/about_us.sass' %}",rel="stylesheet",type="text/css")  
 
