--- a/templates/login.pug
+++ b/templates/login.pug
@@ -21,10 +21,10 @@ html
           hr.solid
           p.input-description User ID
           label(for='username')
-          input#username.input-area(type="text", name='username')
+          input#username.input-area(type="text", name='username', placeholder="Username")
           p.input-description Password 
           label(for='password')
-          input#password.input-area(type="password", name='password')
+          input#password.input-area(type="password", name='password', placeholder="Password")
           p#forgot Forgot Password?
 
           .buttons 
