modify login panel

--- a/static/sass/login.css
+++ b/static/sass/login.css
@@ -25,13 +25,17 @@ body {
   width: 100%;
   height: 100%; }
 
+::placeholder {
+  color: #FFCFBF;
+  opacity: 1; }
+
 #bubbles {
   position: fixed;
   transform: translate(-50%, -50%);
   left: 32%;
   top: 54%;
-  width: 50%;
-  height: 50px; }
+  width: 200px;
+  height: 200px; }
 
 #background-element span {
   border-radius: 50%;
@@ -148,6 +152,8 @@ body {
   #login-panel h1 {
     text-align: center;
     font-size: 3vw; }
+  #login-panel hr {
+    background-color: black; }
   #login-panel form {
     display: flex;
     flex-direction: column;
@@ -165,7 +171,7 @@ body {
   #login-panel #forgot {
     font-size: 1vw;
     text-align: right;
-    margin-top: 0;
+    margin-top: 0.2vw;
     padding-right: 0.5vw; }
   #login-panel #forgot:hover {
     cursor: pointer;
@@ -173,27 +179,29 @@ body {
   #login-panel .buttons {
     display: flex;
     flex-direction: row;
-    margin: 10% 0 0 6vw;
-    font-size: 1vw;
     outline: none; }
     #login-panel .buttons input {
-      margin: 0 1vw 0 0;
-      padding: 8%;
+      transform: translate(-50%, 0);
+      margin: 0 1vw 0 50%;
+      padding: 5% 10% 5% 10%;
       background-color: #3AEDC2;
       border: none;
-      border-radius: 1.5vh;
-      height: 5vh;
+      border-radius: 3vh;
+      height: auto;
       width: auto;
-      font-size: 1vw;
-      outline: none; }
+      outline: none;
+      font-size: 1.7vw; }
     #login-panel .buttons input:hover {
       cursor: pointer; }
     #login-panel .buttons p {
       margin: 0 5% 0 0;
+      transform: translate(-50%, 0);
       text-align: center;
-      padding-top: 8%; }
+      padding-top: 8%;
+      font-size: 1vw; }
     #login-panel .buttons #sign-up {
-      margin: auto 0; }
+      font-size: 1.2vw;
+      transform: translate(-50%, 0); }
     #login-panel .buttons #sign-up:hover {
       cursor: pointer;
       text-decoration: underline; }
