--- a/static/sass/navbar.css
+++ b/static/sass/navbar.css
@@ -77,4 +77,8 @@
 #navbar a:hover {
   text-decoration: underline; }
 
+@media only screen and (max-width: 450px) {
+  #navbar {
+    display: none; } }
+
 /*# sourceMappingURL=navbar.css.map */
